<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent" 
    android:layout_gravity="fill_horizontal" 
    android:background="@drawable/imgq"
    android:orientation="vertical">
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/title1"
	    android:id="@+id/Label"
	    />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
		<EditText
	    	android:layout_height="wrap_content"
	    	android:id="@+id/ovog"
	    	android:selectAllOnFocus="true"
	    	android:lines="1"
	    	android:hint="Овог Нэр" 
	    	android:inputType="text" 
	    	android:layout_width="fill_parent" 
	    	android:layout_gravity="fill_horizontal" 
	    	android:gravity="fill_horizontal">
	    	</EditText>
	</LinearLayout>
	 <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
		<EditText
	    	android:layout_height="wrap_content"
	    	android:id="@+id/dugaar"
	    	android:selectAllOnFocus="true"
	    	android:lines="1"
	    	android:hint="Утасны дугаар" 
	    	android:inputType="text" 
	    	android:layout_width="fill_parent" 
	    	android:layout_gravity="fill_horizontal" 
	    	android:gravity="fill_horizontal">
	    	</EditText>
	</LinearLayout>
	 <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
		<EditText
	    	android:layout_height="wrap_content"
	    	android:id="@+id/email"
	    	android:selectAllOnFocus="true"
	    	android:lines="1"
	    	android:hint="E-mail хаяг" 
	    	android:inputType="text" 
	    	android:layout_width="fill_parent" 
	    	android:layout_gravity="fill_horizontal" 
	    	android:gravity="fill_horizontal">
	    	</EditText>
	</LinearLayout>
	 <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
		<EditText
	    	android:layout_height="wrap_content"
	    	android:id="@+id/bank"
	    	android:selectAllOnFocus="true"
	    	android:lines="1"
	    	android:hint="Банк" 
	    	android:inputType="text" 
	    	android:layout_width="fill_parent" 
	    	android:layout_gravity="fill_horizontal" 
	    	android:gravity="fill_horizontal">
	    	</EditText>
	</LinearLayout>
	 <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
		<EditText
	    	android:layout_height="wrap_content"
	    	android:id="@+id/ddugaar"
	    	android:selectAllOnFocus="true"
	    	android:lines="1"
	    	android:hint="Дансны дугаар" 
	    	android:inputType="text" 
	    	android:layout_width="fill_parent" 
	    	android:layout_gravity="fill_horizontal" 
	    	android:gravity="fill_horizontal">
	    	</EditText>
	</LinearLayout>
	<LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
		<EditText
			android:layout_height="wrap_content"
			android:id="@+id/home"
			android:selectAllOnFocus="true"
			android:lines="1"
			android:hint="Гэрийн хаяг" 
			android:inputType="textPassword" 
			android:layout_width="fill_parent" 
	    	android:layout_gravity="fill_horizontal" 
	    	android:gravity="fill_horizontal">
		</EditText>
	</LinearLayout>
	<LinearLayout
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" 
        android:orientation="horizontal" 
        android:layout_width="fill_parent">
        
	</LinearLayout>
	<LinearLayout
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" 
        android:orientation="horizontal" 
        android:layout_width="fill_parent">
		<Button 
			android:layout_height="wrap_content"
			android:gravity="center_vertical|center_horizontal"
			android:background="@drawable/custom_button_blue"
				
			android:text="@string/str_zahailah"
			android:id="@+id/zahial"
			android:clickable="true" 
			android:layout_width="fill_parent" 
			android:layout_weight="1">
		</Button>
		<Button
			android:layout_height="wrap_content"
			android:gravity="center_vertical|center_horizontal"
			android:background="@drawable/custom_button_blue"
			android:text="@string/Clear"
			android:id="@+id/Clear"
			android:clickable="true" 
			android:layout_width="fill_parent" 
			android:layout_weight="1">
		</Button>
	</LinearLayout>
	<LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
		<Button
			android:layout_height="wrap_content"
			android:gravity="center_vertical|center_horizontal"
			android:background="@drawable/custom_button_blue"
			android:text="@string/Exit"
			android:id="@+id/Exit"
			android:clickable="true" 
			android:layout_width="fill_parent" 
			android:layout_weight="1">
		</Button>
    </LinearLayout>
</LinearLayout>
